// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User Menu Avatar should show the user avatar when one exists 1`] = `
<pf-layout-wrapper-user-menu-avatar
  avatarUrl={[Function String]}
  userContext={[Function Object]}
>
  
  <img
    class="pf-avatar"
    src="https://f7021091349f6caaffd2-5b56effc7aa76a3323ddc3429496d092.ssl.cf5.rackcdn.com/avatars/FakePicture.Jpg"
  />
  
</pf-layout-wrapper-user-menu-avatar>
`;

exports[`User Menu Avatar should show the users initials when user picture is null 1`] = `
<pf-layout-wrapper-user-menu-avatar
  avatarUrl={[Function String]}
  userContext={[Function Object]}
>
  <div
    class="pf-avatar no-avatar"
  >
    
    JD
  
  </div>
  
  
</pf-layout-wrapper-user-menu-avatar>
`;

exports[`User Menu Avatar should show the users initials when user picture is set to default avatar 1`] = `
<pf-layout-wrapper-user-menu-avatar
  avatarUrl={[Function String]}
  userContext={[Function Object]}
>
  <div
    class="pf-avatar no-avatar"
  >
    
    JD
  
  </div>
  
  
</pf-layout-wrapper-user-menu-avatar>
`;
